--- a/css/styles.css
+++ b/css/styles.css
@@ -316,6 +316,8 @@ button {
 }
 
 .mobile-menu-list {
+  display: flex;
+  flex-direction: column;
   gap: 40px;
 }
 
@@ -328,49 +330,42 @@ button {
   color: #2e2f42;
 }
 
-.another {
+.mobile-menu-link:hover,
+.mobile-menu-link:focus {
   color: #404bbf;
 }
 
+.mobile-menu-close:hover .modal-button-icons {
+  fill: #ffffff;
+}
+.mobile-menu-close:focus .modal-button-icons {
+  fill: #ffffff;
+}
+
+.mobile-contacts {
+  font-style: normal;
+  display: block;
+}
 .mobile-contacts-list {
   display: flex;
   flex-direction: column;
   gap: 24px;
+  margin-bottom: 48px;
 }
 
 .mobile-contacts-link {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #434455;
-}
-
-.contacts-link {
-  display: block;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: #434455;
-
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.mobile-contacts-list {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #434455;
-  margin-bottom: 48px;
 }
 
 .mobile-contacts-link:hover,
 .mobile-contacts-link:focus {
   color: #404bbf;
 }
+
 .mobile-network-list {
   display: flex;
   gap: 24px;
@@ -403,5 +398,177 @@ button {
 @media screen and (min-width: 768px) {
   .mobile-menu {
     display: none;
+  }
+}
+
+/* Effective Solutions */
+
+.main-title-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding-top: 72px;
+  padding-bottom: 72px;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url('../images/Dark-mobile-min.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (min-resolution: 2x) {
+  .main-title-section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/Dark-mobile-1-min.jpg');
+  }
+}
+
+.main-title-effective {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: #fff;
+  text-align: center;
+  max-width: 216px;
+  margin-bottom: 72px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.order-btn {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  background-color: #4d5ae5;
+  display: block;
+  min-width: 169px;
+  border-radius: 4px;
+  height: 56px;
+  border: none;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  margin-left: auto;
+  margin-right: auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.order-btn:hover,
+.order-btn:focus {
+  background-color: #404bbf;
+}
+.main-title-section {
+  background-color: #2e2f42;
+}
+
+@media screen and (min-width: 768px) {
+  .main-title-section {
+    padding-top: 112px;
+    padding-bottom: 112px;
+    max-width: 768px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/Dark-tablet-min.jpg');
+  }
+}
+@media screen and (min-resolution: 2x) {
+  .main-title-section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/Dark-tablet@2x-min.jpg');
+  }
+}
+.main-title-effective {
+  font-size: 56px;
+  line-height: 1.08;
+  max-width: 496px;
+  margin-bottom: 36px;
+}
+
+@media screen and (min-width: 1158px) {
+  .main-title-section {
+    padding-top: 188px;
+    padding-bottom: 188px;
+    max-width: 1440px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/dark-page-min.jpg');
+  }
+
+  @media screen and (min-resolution: 2x) {
+    .main-title-section {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url('../images/dark-page@2x-min.jpg');
+    }
+  }
+
+  .main-title-effective {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    max-width: 496px;
+    margin-bottom: 48px;
+  }
+}
+
+/* soft-Skills  */
+
+.soft-skills {
+  background-color: #ffffff;
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+.soft-skills-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 72px;
+}
+
+.soft-skills-icons {
+  display: none;
+}
+
+.soft-skills-subtitle {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.soft-skills-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+@media screen and (min-width: 768px) {
+  .soft-skills-list {
+    gap: 24px;
+    width: calc((100% - 57px) / 4);
+    width: 100%;
   }
 }
