--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  width: 100%;
 }
 
 button {
@@ -70,19 +71,19 @@ button {
 /* common */
 
 .container {
-  width: 320px;
+  max-width: 320px;
   padding: 0 16px;
   margin: 0 auto;
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    width: 768px;
+    max-width: 768px;
   }
 }
 @media screen and (min-width: 1158px) {
   .container {
-    width: 1158px;
+    max-width: 1158px;
     padding: 0 15px;
   }
 }
@@ -346,6 +347,7 @@ button {
   font-style: normal;
   display: block;
 }
+
 .mobile-contacts-list {
   display: flex;
   flex-direction: column;
@@ -567,8 +569,276 @@ button {
 
 @media screen and (min-width: 768px) {
   .soft-skills-list {
-    gap: 24px;
-    width: calc((100% - 57px) / 4);
-    width: 100%;
+    gap: 72px 24px;
+  }
+
+  .soft-skills-item {
+    width: calc((100% - 24px) / 2);
+  }
+
+  .soft-skills-subtitle {
+    text-align: left;
   }
 }
+
+@media screen and (min-width: 1158px) {
+  .soft-skills {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+  .soft-skills-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    margin-bottom: 8px;
+  }
+  .soft-skills-lis {
+    gap: 24px;
+  }
+  .soft-skills-item {
+    width: calc((100% - 72px) / 4);
+  }
+  .soft-skills-subtitle {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+  }
+
+  .soft-skills-text {
+    font-weight: 400;
+  }
+}
+
+/* Our Team */
+
+.our-team {
+  background-color: #f4f4fd;
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+.our-team-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.our-team-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+}
+.our-team-item {
+  background-color: #ffffff;
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  margin-bottom: 72px;
+}
+.our-team-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.our-team-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #434455;
+}
+
+.our-team-content {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.our-team-icons-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 8px;
+}
+
+.our-team-icons-item {
+  width: 40px;
+  height: 40px;
+}
+
+.our-team-icons-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.our-team-icons-link:hover {
+  background-color: #404bbf;
+}
+.our-team-icons-link:focus {
+  background-color: #404bbf;
+}
+
+@media screen and (min-width: 768px) {
+  /* .our-team .container {
+  
+    width: 584px;
+  } */
+
+  .our-team-list {
+    flex-direction: row;
+    gap: 64px 24px;
+  }
+
+  .our-team-item {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  /* .container .our-team .container {
+    max-width: 1158px;
+    padding: 0 15px;
+  } */
+
+  .our-team {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .our-team-list {
+    flex-wrap: nowrap;
+  }
+
+  .our-team-item {
+    flex-basis: calc((100% - 3 * 24px) / 4);
+  }
+}
+
+/* Our Portfolio */
+
+.our-portfolio {
+  background-color: #ffffff;
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+.our-portfolio-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+}
+
+.our-portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
+.our-portfolio-item {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.our-portfolio-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.our-portfolio-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.section-content {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+.our-portfolio-conteiner-text {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 1158px) {
+  .our-portfolio {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .our-portfolio-list:hover {
+    transform: translateY(0%);
+  }
+  .our-portfolio-item {
+    width: calc((100% - 48px) / 3);
+    box-shadow: none;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .our-portfolio-conteiner {
+    position: relative;
+    overflow: hidden;
+  }
+  .our-portfolio-conteiner-text {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .our-portfolio-item:hover .our-portfolio-conteiner-text {
+    transform: translateY(0%);
+  }
+  .our-portfolio-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  }
+  .our-portfolio-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+  }
+}
+
+/* footer */
