--- a/css/styles.css
+++ b/css/styles.css
@@ -650,6 +650,11 @@ button {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   margin-bottom: 72px;
 }
+
+.our-team-item:last-child {
+  margin: 0;
+}
+
 .our-team-subtitle {
   font-weight: 500;
   font-size: 20px;
